[gd_scene load_steps=6 format=3 uid="uid://d3ng3h0ajxdxg"]

[ext_resource type="Script" path="res://scenes/controls/setup_mazo.gd" id="1_urv0u"]
[ext_resource type="Shader" path="res://shaders/blur.gdshader" id="2_58l31"]
[ext_resource type="Theme" uid="uid://dbjmv7rcvq2m7" path="res://themes/theme_hud.tres" id="3_8xf3q"]
[ext_resource type="Script" path="res://scenes/controls/CartasContainer.gd" id="4_knssc"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ddyt5"]
shader = ExtResource("2_58l31")
shader_parameter/amount = 1.229

[node name="SetupMazo" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_urv0u")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
material = SubResource("ShaderMaterial_ddyt5")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 4.0
offset_top = 51.0
offset_right = 636.0
offset_bottom = 82.0
theme = ExtResource("3_8xf3q")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 10
text = "Armando"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Control"]
layout_mode = 0
offset_left = 1.0
offset_top = 75.0
offset_right = 638.0
offset_bottom = 152.0
theme = ExtResource("3_8xf3q")
theme_override_colors/font_color = Color(1, 0.878431, 0.0941176, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 50
text = "El Mazo"
horizontal_alignment = 1

[node name="Leyenda" type="Label" parent="Control"]
layout_mode = 0
offset_left = 6.0
offset_top = 360.0
offset_right = 638.0
offset_bottom = 459.0
theme = ExtResource("3_8xf3q")
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="PosicionMazo" type="Marker2D" parent="Control"]
position = Vector2(597, 529)

[node name="PosicionMano" type="Marker2D" parent="Control"]
position = Vector2(320, 161)

[node name="CartasContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_knssc")

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
